<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="add">Add</string>
    <string name="add_input">input here&#8230;</string>
    <string name="add_category">add category</string>
    <string name="add_item">add item</string>
    <string name="add_temp_item">add temporary item</string>
    <string name="app_name">Schowek</string>
    <string name="action_settings">Settings</string>
    <string name="auto_login">Auto-login</string>
    <string name="allow_no_pass">Allow no password</string>

    <string name="backup">Backup</string>
    <string name="backup_store">Save backup</string>
    <string name="backup_load">Load backup</string>
    <string name="backup_target_internal">Target: internal memory</string>
    <string name="backup_target_external">Target: external SD card</string>
    <string name="backup_not_set">Backup direction NOT selected - assuming accidental click</string>
    <string name="backup_db_not_found">Unable to find application database!</string>


    <string name="bilans_status_account_txt_1">Account status (1)</string>
    <string name="bilans_status_account_txt_2">Account status (2) /assets</string>
    <string name="bilans_status_debts_minus">To return</string>
    <string name="bilans_status_debts_plus">To collect</string>
    <string name="bilans_status_wallet_txt">Wallet status</string>
    <string name="bilans_view_filter_displayed_category_hint">filter by category&#8230;</string>

    <string name="bilans_paid_with_cash">Cash</string>
    <string name="bilans_paid_with_card_1">Card 1</string>
    <string name="bilans_paid_with_card_2">Lunchcard</string>
    <string name="bilans_atm_withdrawal">ATM</string>
    <string name="bilans_income_any">income</string>

    <string name="bilans_status_wallet_value">0.0</string>
    <string name="bilans_status_value">0.0</string>
    <string name="bilans_new_cash_container">0.0</string>


    <string name="bilans_info_add_new_or_select">Add new item name above OR select from drop down menu below</string>


    <string name="clean_all">Purge table (!)</string>
    <string name="cancel">Cancel</string>
    <string name="content_encrypted">Content encrypted.\n</string>


    <string name="debts_button_txt">Debts:borrowed/lend</string>
    <string name="debts_borrow_in">borrow</string>
    <string name="debts_lend_out">lend</string>
    <string name="debts_who">who</string>
    <string name="debts_amount">amount</string>
    <string name="debts_description">description</string>
    <string name="delete_question">Delete?</string>
    <string name="delete_confirm">Are you sure you want to delete:</string>
    <string name="delete_successful">Delete successful.</string>
    <string name="delete_failed">Delete failed.</string>
    <string name="discarded_new_entry">Discarded adding new entry.</string>
    <string name="show_completed">show completed</string>


    <string name="empty_or_cancelled">Empty contents or cancel has been pressed</string>
    <string name="empty_input">No input!</string>
    <string name="failed">Operation failed!</string>
    <string name="get_password">Enter password</string>

    <string name="manage_funds">Manage funds status</string>
    <string name="language">Language</string>
    <string name="language_pl">Polish</string>
    <string name="language_en">English</string>
    <string name="login">Login</string>

    <string name="not_found">Item not found</string>
    <string name="not_logged">Not logged in.</string>
    <string name="ok">OK</string>
    <string name="pass_too_short">password too short, use at least 3 digits&#8230;</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="set_password">Set password</string>
    <string name="sort_order">Sort order</string>
    <string name="right_now">currently:</string>

    <string name="title_activity_bilans">Cash flow activity</string>
    <string name="title_activity_bilans_view">Bilans View</string>
    <string name="title_activity_bilans_add">Add/Edit shopping item</string>
    <string name="title_activity_notes">Notes activity</string>
    <string name="title_activity_notes_view">Notes View</string>
    <string name="title_activity_notes_add">Add/Edit note</string>
    <string name="title_activity_backup_activity_view">BackupActivityView</string>
    <string name="title_activity_bilans_debts">Debts mgr</string>
    <string name="title_activity_bilans_status_setting">Setting accounts</string>



    <string name="todo_add_assigned_tags_header">Currently assigned</string>
    <string name="todo_add_available_tags_header">Available</string>
    <string name="todo_manage_tags_button">Manage tags</string>
    <string name="filter_hint">filter this list</string>

    <string name="title_activity_smallitems">Small items to remember</string>
    <string name="title_activity_todo">To-Do</string>
    <string name="title_activity_todo_add">To-Do - add item</string>

    <string name="update_successful">Update successful.</string>
    <string name="update_failed">Update failed.</string>
    <string name="wrong_password">Wrong password - or password not set.</string>

    <string name="content_asc">Content: ASC</string>
    <string name="content_desc">Content: DESC</string>
    <string name="creation_asc">Creation date: ASC</string>
    <string name="creation_desc">Creation date: DESC</string>
    <string name="modification_asc">Modification date: ASC</string>
    <string name="modification_desc">Modification date: DESC</string>

</resources>
