<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="._BackupActivityView"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/backup_calling_activity"
        android:hint="This field should contain DB name"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/backup_direction">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup_store"
            android:id="@+id/Save_backup_radio"
            android:layout_gravity="center_horizontal"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup_load"
            android:id="@+id/Load_backup_radio"
            android:layout_gravity="center_horizontal"
            android:checked="false" />

    </RadioGroup>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/backup_target">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup_target_internal"
            android:id="@+id/internal_radio"
            android:layout_gravity="center_horizontal"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup_target_external"
            android:id="@+id/external_radio"
            android:layout_gravity="center_horizontal"
            android:checked="true" />
    </RadioGroup>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:id="@+id/backup_go"
        android:onClick="runBackupOrRestore"
        />

</LinearLayout>
