<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Todos.TodoView">

    <LinearLayout
        android:id="@+id/todo_view_buttons_container"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/todo_manage_tags_button"
            android:id="@+id/todo_add_new_tags_button"
            android:onClick="tags_add_new" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/add_new_note_button"
            android:onClick="note_add_new" />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/edit_text_for_tags_filtering"
        android:layout_gravity="bottom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/todo_view_buttons_container"
        android:hint="@string/filter_hint"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:id="@+id/todo_list_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_text_for_tags_filtering" />



</RelativeLayout>