<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:windowSoftInputMode="stateAlwaysVisible">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/notes_add_new_save"
            android:onClick="save_clicked" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/notes_add_new_cancel"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_gravity="end"
            android:onClick="cancel_clicked"/>
    </LinearLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="175dp"
        android:layout_width="match_parent">

        <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/display_or_update_entry_field"
        android:focusable="true"
        android:gravity="top"
        android:windowSoftInputMode="stateAlwaysVisible"
             />
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TAGS"
        android:id="@+id/todo_tags_columns_header"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_new_tag_field"
            android:hint="Enter new tag" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/todo_add_new_tag"
            android:onClick="add_new_tag"/>
    </LinearLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/todo_add_assigned_tags_header"
                    android:id="@+id/todo_add_assigned_tags_header"/>

                <ListView
                    android:layout_width="wrap_content"
                    android:layout_height="180dp"
                    android:id="@+id/todo_add_assigned_tags_listview"
                    android:choiceMode="multipleChoice" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/todo_add_available_tags_header"
                    android:gravity="right"
                    android:id="@+id/todo_add_available_tags_header"/>

                <ListView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/todo_add_available_tags_listview"
                    android:choiceMode="multipleChoiceModal" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>