<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/bilans_add_new_save"
        android:onClick="bilans_finalize_this_shopping_list"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <EditText
            android:id="@+id/bilans_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:hint="@string/add_input"
            android:layout_weight="1"/>
        <!--android:inputType="number|numberDecimal|numberSigned"-->

        <ImageButton
            android:id="@+id/bilans_date_picker_button"
            android:src="@drawable/calendar"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:gravity="right"
            android:hint="@string/add_input"
            android:onClick="runDatePicker"
            android:background="@null"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <EditText
            android:id="@+id/bilans_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:hint="@string/add_input"
            android:layout_weight="1"/>

       <ImageButton
       android:src="@drawable/clock"
       android:layout_width="0dp"
       android:adjustViewBounds="true"
       android:scaleType="fitCenter"
       android:layout_height="fill_parent"
       android:id="@+id/bilans_time_picker_button"
       android:gravity="right"
       android:onClick="runTimePicker"
       android:background="@null"
       android:layout_weight="1"/>

    </LinearLayout>

    <!-- android:touchscreenBlocksFocus="false" ?? -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/add_category"
                android:id="@+id/bilans_button_new_category"
                android:layout_gravity="right"
                android:onClick="add_category"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/add_item"
                android:id="@+id/bilans_add_new_details"
                android:layout_gravity="right"
                android:onClick="add_item_to_category"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/add_temp_item"
                android:id="@+id/bilans_add_temporary_item_no_save"
                android:layout_gravity="right"
                android:onClick="add_item_to_shopping_list_one_time"/>
                
        </LinearLayout>
        <Space
                android:layout_width="30dp"
                android:layout_height="match_parent"
        />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:id="@+id/bilans_selected_method">
        </RadioGroup>
    </LinearLayout>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/coarse_desc_bilans"
        android:spinnerMode="dropdown" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/detailed_desc_bilans" />
	<!-- android:choiceMode="multipleChoice" -->
</LinearLayout>